# Linux-Page-Cache-Benchmark-Tool

./: CMakeLists.txt  README.md
docs/: architecture.md
include/: benchmark.hpp  metrics.hpp
src/: benchmark.cpp  buffered_io.cpp  direct_io.cpp  main.cpp  metrics.cpp  mmap_io.cpp
